--- a/.github/workflows/github-actions-pull.yml
+++ b/.github/workflows/github-actions-pull.yml
@@ -5,7 +5,7 @@ on:
     types:
       - opened
     branches:
-      - "master"
+      - "main"
 jobs:
   Explore-GitHub-Pull-Action:
     runs-on: ubuntu-latest
