create action delete 2.

--- a/.github/workflows/github-actions-pull-2.yml
+++ b/.github/workflows/github-actions-pull-2.yml
@@ -6,7 +6,7 @@ on:
       - opened
 jobs:
   run_if:
-    if: startsWith(github.head_ref, 'releases/')
+    if:   startsWith(github.head_ref, 'releases/')
     runs-on: ubuntu-latest
     steps:
-      - run: echo "the head of this PR starts with "releases/"
+      - run: echo "the head of this PR starts with 'releases/'"
