create action json

--- a/.github/workflows/github-actions-json.yml
+++ b/.github/workflows/github-actions-json.yml
@@ -16,4 +16,4 @@ jobs:
     strategy:
       matrix: ${{ fromJSON(needs.job1.outputs.matrix) }}
     steps:
-      run: echo "Matrix - Project ${{ matrix.project }}, Config ${{ matrix.config }}"
+      - run: echo "Matrix - Project ${{ matrix.project }}, Config ${{ matrix.config }}"
