--- a/.github/workflows/github-actions-json.yml
+++ b/.github/workflows/github-actions-json.yml
@@ -1,6 +1,11 @@
 name: Example Workflow For Json Files
 run-name: ${{ github.actor }} is json action
 on: push
+
+env:
+  continue: true
+  time: 3
+
 jobs:
   job1:
     runs-on: ubuntu-latest
@@ -17,3 +22,11 @@ jobs:
       matrix: ${{ fromJSON(needs.job1.outputs.matrix) }}
     steps:
       - run: echo "Matrix - Project ${{ matrix.project }}, Config ${{ matrix.config }}"
+
+  job3:
+    runs-on: ubuntu-latest
+    steps:
+      - continue-on-error: ${{ fromJSON(env.continue) }}
+        timeout-minutes: ${{ fromJSON(env.time) }}
+        run: echo ...
+      - run: echo "${{ env.continue }} - ${{ env.time }}"
