create action json

--- a/.github/workflows/github-actions-json.yml
+++ b/.github/workflows/github-actions-json.yml
@@ -27,4 +27,5 @@ jobs:
     needs: job2
     runs-on: ubuntu-latest
     steps:
-      - name: "the job has succeeded ${{success()}}"
+      - name: the job has succeeded
+        run: echo "status ${{success()}}"
