--- a/.github/workflows/github-actions-check.yml
+++ b/.github/workflows/github-actions-check.yml
@@ -10,5 +10,5 @@ jobs:
         run: exit 1
 
       - name: the demo step has failed
-        if: ${{ steps.demo.conclusion == 'failure' }}
-        run: echo "demo failed"
+        if: ${{ failure() && steps.demo.conclusion == 'failure' }}
+        run: echo "${{ steps.demo.conclusion }}"
