--- a/.github/workflows/github-actions-env.yml
+++ b/.github/workflows/github-actions-env.yml
@@ -11,3 +11,10 @@ jobs:
       - name: Use environment variable
         run: |
           echo "The value of MY_ENV_VAR is $MY_ENV_VAR"
+
+  Use-Vars:
+    needs: Set-And-Use-Env-Vars
+    runs-on: ubuntu-latest
+    steps:
+      - name: Use variable
+        run: echo "The value of MY_ENV_VAR is $MY_ENV_VAR"
