--- a/.github/workflows/github-actions-env.yml
+++ b/.github/workflows/github-actions-env.yml
@@ -1,6 +1,8 @@
 name: Example Workflow for Environment Files
 run-name: ${{ github.actor }} is demo action
 on: push
+env:
+  name: fifa
 jobs:
   Set-And-Use-Env-Vars:
     runs-on: ubuntu-latest
@@ -17,4 +19,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Use variable
-        run: echo "The value of MY_ENV_VAR is $MY_ENV_VAR"
+        run: echo "The value of MY_ENV_VAR is ${{ vars.name }}"
