--- a/.github/workflows/github-actions-env.yml
+++ b/.github/workflows/github-actions-env.yml
@@ -2,7 +2,7 @@ name: Example Workflow for Environment Files
 run-name: ${{ github.actor }} is demo action
 on: push
 env:
-  name: "fifa"
+  name: "fifa1"
 jobs:
   Set-And-Use-Env-Vars:
     runs-on: ubuntu-latest
