create action vars

--- a/.github/workflows/github-actions-env.yml
+++ b/.github/workflows/github-actions-env.yml
@@ -17,8 +17,6 @@ jobs:
   Use-Vars:
     needs: Set-And-Use-Env-Vars
     runs-on: ubuntu-latest
-    env:
-      ENV_RUNNER: ${{ vars.RUNNER }}
     steps:
       - name: Use variable
-        run: echo "The value of MY_ENV_VAR is - $ENV_RUNNER - $name"
+        run: echo "The value of MY_ENV_VAR is - ${{ vars.RUNNER }} - ${{ env.RUNNER }}"
