--- a/.github/workflows/github-actions-matrix.yml
+++ b/.github/workflows/github-actions-matrix.yml
@@ -9,5 +9,8 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         node: [14, 16]
     steps:
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
       - name: Output node version
         run: node --version
