--- a/.github/workflows/github-actions-concurrency.yml
+++ b/.github/workflows/github-actions-concurrency.yml
@@ -9,4 +9,4 @@ jobs:
       cancel-in-progress: true
     steps:
       - name: first step
-        run: echo "the is step."
+        run: echo "the is step"
