--- a/.github/workflows/github-actions-cache.yml
+++ b/.github/workflows/github-actions-cache.yml
@@ -23,5 +23,5 @@ jobs:
         run: npm list
       - name: Install dependencies
         run: npm install
-      - name: Build
+      - name: Build.
         run: npm run build
