--- a/.github/workflows/github-actions-cache.yml
+++ b/.github/workflows/github-actions-cache.yml
@@ -17,6 +17,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+          node-version: 20
       - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         name: List the state of node modules
         continue-on-error: true
