create action cache

--- a/.github/workflows/github-actions-cache.yml
+++ b/.github/workflows/github-actions-cache.yml
@@ -5,6 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - name: Cache node modules
         id: cache-npm
         uses: actions/cache@v3
@@ -17,7 +20,6 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-          node-version: 20
       - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         name: List the state of node modules
         continue-on-error: true
