--- a/.github/workflows/github-actions-cache.yml
+++ b/.github/workflows/github-actions-cache.yml
@@ -7,8 +7,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-      - name: Cache node modules
+          node-version: "20"
+      - name: optput node version
+        run: node -v
+      - name: Cache node modules ${{  }}
         id: cache-npm
         uses: actions/cache@v3
         env:
