create action cache

--- a/.github/workflows/github-actions-cache.yml
+++ b/.github/workflows/github-actions-cache.yml
@@ -22,6 +22,8 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+      - name: optput node version
+        run: node -v
       - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
         name: List the state of node modules
         continue-on-error: true
