--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: composite action
+run-name: ${{ github.actor }} is composite action
 on: push
 jobs:
   hello_world_job:
@@ -8,6 +9,8 @@ jobs:
       - uses: actions/checkout@v4
       - id: foo
         uses: fengyangfifa/composite-action@v1
+        with:
+          who-to-greet: 'Mona the Octocat'
       - run: echo random-number "$RANDOM_NUMBER"
         shell: bash
         env:
