--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
       - uses: actions/checkout@v4
       - id: foo
         uses: fengyangfifa/composite-action@v1
+        with:
+          who-to-greet: 'Mona the Octocat'
       - run: echo random-number "$RANDOM_NUMBER"
         shell: bash
         env:
