--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,11 @@ on: [push]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: a job to say hello fifa
     steps:
       - uses: actions/checkout@v4
       - id: foo
         uses: fengyangfifa/composite-action@main
-        with:
-          who-to-greet: 'Mona the Octocat'
       - run: echo random-number "$RANDOM_NUMBER"
         shell: bash
         env:
